# tct-models

./: .gitignore  LICENSE  README.md  animate_tct.py  generate_comparison_gif.py  generate_fair_comparison_gif.py  generate_schema_gif.py  generate_tct_gif.py  generate_zero_entropy_gif.py  pyproject.toml
configs/: __init__.py  model_configs.py  schema_configs.py
nanochat/: engine.py  jsonl_dataloader.py  tct_syntax_token_package.py  xgrammar_tokenizer.py
scripts/: check_tct_syntax_token_package.py  eval.sh  eval_generation.py  eval_icml.py  setup.sh  train.sh  train_unified.py
scripts/animations/: generate_comparison_gif.py  generate_fair_comparison_gif.py  generate_schema_gif.py  generate_tct_gif.py  generate_zero_entropy_gif.py
tests/: test_tct_syntax_token_package.py
